# robotics-toolbox-python

./: .buildinfo  .codecov.yml  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  arm.html  arm_backend.html  arm_backend_pyplot.html  arm_backend_swift.html  arm_backend_vpython.html  arm_dh.html  arm_erobot.html  arm_ets.html  arm_models.html  arm_superclass.html  arm_trajectory.html  blobs.html  blocks-arm.html  blocks-mobile.html  blocks-spatial.html  blocks-uav.html  blocks.html  camera.html  color.html  environment.yml  features2d.html  genindex.html  graphics.html  image.html  (+50 more)
.github/: CONTRIBUTING.md  (+5 more)
roboticstoolbox/models/xacro/kinova/: .gitignore  CMakeLists.txt  package.xml
roboticstoolbox/models/xacro/kinova/launch/: display_kinova_robot.launch
roboticstoolbox/models/xacro/kinova/urdf/: j2n6s300_standalone.xacro  j2n7s300.xacro  j2n7s300_standalone.xacro  j2s6s200_standalone.xacro  kinova.gazebo  kinova_common.xacro  kinova_inertial.xacro  m1n4s200.xacro  m1n6s200.xacro  m1n6s200_standalone.xacro
rtb-data/rtbdata/xacro/ridgeback_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rtb-data/rtbdata/xacro/ridgeback_description/launch/: description.launch
rtb-data/rtbdata/xacro/ridgeback_description/meshes/: 3dm-gxX.stl  axle.stl  body-collision.stl  body.stl  end-cover.stl  lights.stl  rocker.stl  side-cover.stl  top.stl  ust-10lx.stl  wheel.stl
rtb-data/rtbdata/xacro/ridgeback_description/scripts/: env_run
rtb-data/rtbdata/xacro/ridgeback_description/urdf/: ridgeback.urdf.xacro
rtb-data/rtbdata/xacro/ridgeback_description/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro  microstrain_imu.urdf.xacro  sick_lms1xx_mount.urdf.xacro  sick_s300_mount.urdf.xacro
rtb-data/rtbdata/xacro/ridgeback_description/urdf/configs/: base  base_sick  dual_hokuyo_lasers  dual_sick_lasers  empty
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/: CMakeLists.txt  package.xml
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/meshes/: rbrobout_chassis.stl  rbrobout_top_cover.stl  s300.stl  vectornav_vn100.stl
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/robots/: rbrobout_plus.urdf.xacro
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/ur_description/meshes/ur10/collision/: wrist1.stl
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/ur_description/meshes/ur3/collision/: forearm.stl  shoulder.stl  wrist2.stl
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/ur_description/meshes/ur3/visual/: forearm.dae  wrist3.dae
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/ur_description/meshes/ur5/visual/: wrist1.dae
rtb-data/rtbdata/xacro/robotnik_rbrobout_plus_urdf/urdf/: camera_plugin.urdf.xacro  depth_camera_plugin.urdf.xacro  imu_plugin.urdf.xacro  intel_realsense_d435.urdf.xacro  lidar_2d_plugin.urdf.xacro  rbrobout_base.urdf.xacro  rbrobout_body.urdf.xacro  rbrobout_control.urdf.xacro  rbrobout_controller_params.yaml  rbrobout_mecanum_wheel.urdf.xacro  rbrobout_top_cover.urdf.xacro  sick_s300.urdf.xacro  vectornav.urdf.xacro
rtb-data/rtbdata/xacro/wam_description/barrett_model/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rtb-data/rtbdata/xacro/wam_description/barrett_model/cad/bhand/BarrettHand280-SolidWorks/: B4157.SLDPRT  B4158.SLDPRT  B4159.SLDPRT  B4160.SLDPRT  BarrettHand-280.SLDASM
rtb-data/rtbdata/xacro/wam_description/barrett_model/cad/wam/: B0926.SLDPRT  B0990.SLDPRT  B0991.SLDPRT  B0992.SLDPRT  B1090.sldprt  B1312.SLDPRT  B1313.SLDPRT  B1314.SLDASM  B1995.SLDASM  B1998.SLDPRT  B1999.SLDPRT  B2123.SLDPRT  B2123_2.SLDPRT  B2124.SLDPRT  B2124_2.SLDPRT  B2125.SLDPRT  B2125_2.SLDPRT  B2126.SLDPRT  B2126_2.SLDPRT  B2127.SLDPRT  B2127_2.SLDPRT  B2571.SLDPRT  B2573.SLDPRT  B2573_2.SLDPRT  B2574.SLDPRT  B2579.SLDASM  B2580.SLDASM  B2581.SLDPRT  B2582.SLDPRT  B2583.SLDPRT  B2584.SLDPRT  B2585.SLDPRT  B2586.SLDASM  B2587.SLDASM  B2647.SLDASM  B2648.SLDASM  B2649.SLDASM  B2650.SLDASM  B2651.SLDASM  B2714.SLDASM  (+9 more)
rtb-data/rtbdata/xacro/wam_description/barrett_model/models/: arm.urdf.xacro  ball.urdf.xacro  common.urdf.xacro  components.urdf.xacro  hand.urdf.xacro  wam_top.urdf.xacro
rtb-data/rtbdata/xacro/wam_description/barrett_model/models/meshes/: firstFingerLink.DAE  firstFingerLink.stl  forceTorqueSensor.DAE  forceTorqueSensor.stl  palm.DAE  palm.stl  secondFingerLink.DAE  secondFingerLink.stl  thirdFingerLink.DAE  thirdFingerLink.stl  wamBase.dae  wamBase.mtl  wamBase.stl  wamForeArmLink4.DAE  wamForeArmLink4.DAE.broken  wamForeArmLink4.stl  wamLowerWristFTPalmLink.DAE  wamLowerWristFTPalmLink7.stl  wamLowerWristFTPalmLinkM.DAE  wamLowerWristLink7.DAE  wamLowerWristLink7.blend  wamLowerWristLink7.blend1  wamLowerWristLink7.blend2  wamLowerWristLink7.stl  wamShoulderLink1.DAE  wamShoulderLink1.stl  wamUpperArmInShoulderLink.DAE  wamUpperArmInShoulderLink2.stl  wamUpperArmLink3.DAE  wamUpperArmLink3.stl  wamUpperWristPitchLink6.DAE  wamUpperWristPitchLink6.stl  wamUpperWristYawLink.DAE  wamUpperWristYawLink5.stl
rtb-data/rtbdata/xacro/wam_description/barrett_model/models/sw_meshes/: base_link.stl  base_link_convex.stl  base_yaw_link.stl  elbow_link.blend  elbow_link_convex.dae  elbow_link_convex.stl  forearm_link_convex_decomposition.dae  forearm_link_fine.stl  shoulder_link_convex.stl  shoulder_link_convex_decomposition.blend  shoulder_link_fine.stl  shoulder_pitch_link.stl  shoulder_pitch_link_convex.dae  shoulder_pitch_link_convex.stl  shoulder_pitch_link_fine.stl  upper_arm_link_convex_decomposition.dae  upper_arm_link_convex_decomposition_p2.stl  wrist_palm_link.dae  wrist_palm_link_convex.dae  wrist_pitch_link.stl  wrist_pitch_link_convex.stl  wrist_pitch_link_convex_decomposition.blend  wrist_yaw_link.stl  wrist_yaw_link_convex_decomposition.blend
rtb-data/rtbdata/xacro/wam_description/barrett_model/robots/: wam4.urdf.xacro  wam4_stump.urdf.xacro  wam7.urdf.xacro  wam7_bhand.urdf.xacro  wam_4dof_wam_bhand.urdf.xacro  wam_7dof_wam_bhand.urdf.xacro
(+2104 files in other folders)
