[project]

name = "roboticstoolbox-python"

description = "A Python library for robotics education and research"

version = "1.2.0"

authors = [
    { name = "Jesse Haviland", email = "j.haviland@qut.edu.au" },
    { name = "Peter Corke", email = "rvc@petercorke.com" },
]

dependencies = [
    "numpy",
    "spatialmath-python>=1.1.5",
    "spatialgeometry>=1.0.0",
    "pgraph-python",
    "scipy",
    "matplotlib",
    "ansitable",
    "swift-sim>=1.0.0",
    "rtb-data",
    "progress",
    "typing_extensions",
    "colored>2.0.0",
]

license = { file = "LICENSE" }

readme = "README.md"

requires-python = ">=3.8"

keywords = [
    "python",
    "robotics",
    "robotics-toolbox",
    "kinematics",
    "dynamics",
    "motion-planning",
    "trajectory-generation",
    "jacobian",
    "hessian",
    "control",
    "simulation",
    "robot-manipulator",
    "mobile-robot",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[project.urls]
homepage = "https://petercorke.github.io/robotics-toolbox-python/"
documentation = "https://petercorke.github.io/robotics-toolbox-python/"
repository = "https://github.com/petercorke/robotics-toolbox-python"


[project.optional-dependencies]

# pybullet has no arm64 wheel; on Apple Silicon install manually:
#   CC=/usr/bin/clang CXX=/usr/bin/clang++ \
#   CFLAGS="-Wno-error -Wno-implicit-function-declaration" \
#   pip install pybullet
collision = [
    "pybullet; platform_machine != 'arm64' or sys_platform != 'darwin'",
]

dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pyyaml",
    "sympy",
    "roboticstoolbox-python[qp]",
    "bdsim",
    "ruff",
]

nb = [
    "pytest-nbmake",
]

qp = ["qpsolvers", "quadprog"]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autorun",
    "sphinx_autodoc_typehints",
    "sphinx-favicon",
]


[project.scripts]

eigdemo = "roboticstoolbox.examples.eigdemo:main"
tripleangledemo = "roboticstoolbox.examples.tripleangledemo:main"
twistdemo = "roboticstoolbox.examples.twistdemo:main"
rtbtool = "roboticstoolbox.bin.rtbtool:main"


[build-system]

requires = ["scikit-build-core>=0.9", "numpy"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
wheel.packages = ["src/roboticstoolbox"]
sdist.include = [
    "src/roboticstoolbox",
    "tests",
    "CMakeLists.txt",
    "README.md",
    "LICENSE",
]


[tool.ruff]
line-length = 88
exclude = [".git", "build", "dist", "docs", ".venv", ".tox"]

[tool.ruff.lint]
ignore = ["F821", "E741", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.cibuildwheel]

build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.pyodide]
# Pyodide (wasm32-emscripten) — used by JupyterLite
# cibuildwheel manages the Emscripten SDK; scikit-build-core picks up
# the toolchain file automatically from the PYODIDE environment.


[tool.coverage.run]
omit = ["src/roboticstoolbox/examples/*", "test_*.py"]
